# fastCMS

./: .env.example  .gitignore  README.md  alembic.ini  fix_and_run.bat  pyproject.toml  quickstart.md  requirements.txt  test_auth.md  test_imports.py
app/: main.py
app/api/v1/: auth.py  collections.py  files.py  realtime.py  records.py
app/core/: config.py  dependencies.py  events.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  base.py  collection.py  dynamic.py  file.py  user.py
app/db/repositories/: collection.py  file.py  record.py  user.py
app/schemas/: auth.py  collection.py  file.py  record.py
app/services/: auth_service.py  collection_service.py  file_service.py  record_service.py
app/utils/: field_types.py
migrations/: env.py
